# AI-Employee

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/skills/create-plan/: SKILL.md
.claude/skills/gmail-checker/: SKILL.md
.claude/skills/linkedin-poster/: SKILL.md
.claude/skills/process-inbox/: SKILL.md
.claude/skills/update-dashboard/: SKILL.md
.claude/skills/vault-manager/: SKILL.md
AI_Employee_Vault/: Company_Handbook.md  Dashboard.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: INBOX_test_task_20260220.md  TASK_test_task_20260220.md
mcp_servers/gmail_send/: server.py
watchers/: base_watcher.py  filesystem_watcher.py  gmail_watcher.py  linkedin_watcher.py  orchestrator.py
